Only iterate over directories (check beforehand).

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -310,22 +310,23 @@
     "dfs = []\n",
     "# FOR EACH division.\n",
     "for division in divisions:\n",
-    "    submitters_dir = os.path.join(results_path, division)\n",
     "    if division != 'closed': continue # skip for now\n",
     "    # FOR EACH submitter.\n",
-    "    for submitter in os.listdir(submitters_dir):\n",
-    "#         if division == 'closed' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
-    "        if division == 'closed' and submitter not in [ 'Intel' ]: continue # [ 'Alibaba', 'DellEMC', 'Habana', 'Google' ]\n",
-    "        systems_dir = os.path.join(submitters_dir, submitter, 'systems')\n",
-    "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
+    "    submitters_dir = os.path.join(results_path, division)\n",
+    "    submitters = [ fn for fn in os.listdir(submitters_dir) if os.path.isdir(os.path.join(submitters_dir, fn)) ]\n",
+    "    for submitter in submitters:\n",
+    "        # Selectively filter out submitters.\n",
+    "        #if division == 'closed' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
+    "        if division == 'closed' and submitter not in [ 'Intel' ]: continue # [ 'Alibaba', 'DellEMC', 'Habana', 'Google' ]        \n",
     "        # FOR EACH system.\n",
-    "        for system in os.listdir(results_dir):\n",
+    "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
+    "        systems = [ fn for fn in os.listdir(results_dir) if os.path.isdir(os.path.join(results_dir, fn)) ]\n",
+    "        print(results_dir)\n",
+    "        print(\"#systems: %d\" % len(systems))\n",
+    "        for system in systems:\n",
     "            system_dir = os.path.join(results_dir, system)\n",
-    "            if os.path.isfile(system_dir): # skip regular files like 'compliance_checker_log.txt'\n",
-    "                print(\"Warning: '%s' is a regular file, not a directory - skipping ...\" % system_dir)\n",
-    "                continue    \n",
     "            system_json_name = system + '.json'\n",
-    "            system_json_path = os.path.join(systems_dir, system_json_name)\n",
+    "            system_json_path = os.path.join(submitters_dir, submitter, 'systems', system_json_name)\n",
     "            with open(system_json_path) as system_json_file:\n",
     "                system_json = json.load(system_json_file)\n",
     "            # System details.\n",
@@ -440,12 +441,11 @@
     "                'Division', 'Category', 'Submitter', 'System', 'Software', 'Benchmark' #, 'Task', 'Scenario'\n",
     "            ]\n",
     "            # FOR EACH benchmark.\n",
-    "            for benchmark in os.listdir(system_dir):\n",
+    "            benchmarks = [ fn for fn in os.listdir(system_dir) if os.path.isdir(os.path.join(system_dir, fn)) ]\n",
+    "            print(\"#benchmarks: %d\" % len(benchmarks))\n",
+    "            for benchmark in benchmarks:\n",
+    "                # Reset all scores.\n",
     "                data[0].update({ score : '' for score in score_columns })\n",
-    "                benchmark_dir = os.path.join(system_dir, benchmark)\n",
-    "                if os.path.isfile(benchmark_dir): # skip regular files like 'compliance_checker_log.txt'\n",
-    "                    print(\"Warning: '%s' is a regular file, not a directory - skipping ...\" % benchmark_dir)\n",
-    "                    continue\n",
     "                # Benchmark (with notes).\n",
     "                benchmark_dict = non_imagenet_benchmarks.get(benchmark)\n",
     "                if benchmark_dict:\n",
@@ -474,13 +474,14 @@
     "                data[0]['Benchmark'] = benchmark_with_notes\n",
     "\n",
     "                # FOR EACH scenario.\n",
-    "                for scenario in os.listdir(benchmark_dir):\n",
+    "                benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "                print(benchmark_dir)\n",
+    "                scenarios = [ fn for fn in os.listdir(benchmark_dir) if os.path.isdir(os.path.join(benchmark_dir, fn)) ]\n",
+    "                print(\"#scenarios: %d\" % len(scenarios))\n",
+    "                for scenario in scenarios:\n",
     "                    scenario_str = scenario_to_str.get(scenario,'')\n",
     "                    if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
     "                    experiment_dir = os.path.join(benchmark_dir, scenario)\n",
-    "                    if os.path.isfile(experiment_dir): # skip regular files like 'compliance_checker_log.txt'\n",
-    "                        print(\"Warning: '%s' is a regular file, not a directory - skipping ...\" % experiment_dir)\n",
-    "                        continue\n",
     "                    # Extract accuracy.\n",
     "                    accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
     "                    with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
