Support submissions from Alibaba, NVIDIA, Qualcomm, Tencent.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -316,13 +316,11 @@
     "    submitters = [ fn for fn in os.listdir(submitters_dir) if os.path.isdir(os.path.join(submitters_dir, fn)) ]\n",
     "    for submitter in submitters:\n",
     "        # Selectively filter out submitters.\n",
-    "        #if division == 'closed' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
-    "        if division == 'closed' and submitter not in [ 'Intel' ]: continue # [ 'Alibaba', 'DellEMC', 'Habana', 'Google' ]        \n",
+    "        #if division == 'open' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
+    "        if division == 'closed' and submitter not in [ 'Centaur' ]: continue # [ 'Alibaba', 'DellEMC', 'dividiti', 'Google', 'Habana', 'Intel', 'NVIDIA', 'Qualcomm', 'Tencent' ]: continue\n",
     "        # FOR EACH system.\n",
     "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
     "        systems = [ fn for fn in os.listdir(results_dir) if os.path.isdir(os.path.join(results_dir, fn)) ]\n",
-    "        print(results_dir)\n",
-    "        print(\"#systems: %d\" % len(systems))\n",
     "        for system in systems:\n",
     "            system_dir = os.path.join(results_dir, system)\n",
     "            system_json_name = system + '.json'\n",
@@ -335,12 +333,13 @@
     "            system_id = system_list[0]\n",
     "\n",
     "            # Processor (CPU).\n",
-    "            processor = system_id_to_processor.get(system_id, system_json['host_processor_model_name'])\n",
-    "            processor_num = system_json['host_processors_per_node']\n",
+    "            processor = system_id_to_processor.get(system_id, system_json.get('host_processor_model_name', 'N/A'))\n",
+    "            processor_num = int(system_json.get('host_processors_per_node', -1))\n",
     "\n",
     "            # Accelerator.\n",
-    "            accelerator = system_json['accelerator_model_name']\n",
-    "            accelerator_num = system_json['accelerators_per_node']\n",
+    "            print(system)\n",
+    "            accelerator = system_json.get('accelerator_model_name', 'N/A')\n",
+    "            accelerator_num = int(system_json.get('accelerators_per_node', -1))\n",
     "\n",
     "            # Software (framework).\n",
     "            software = system_json['framework']\n",
@@ -351,32 +350,49 @@
     "\n",
     "            # Submitter-specific form factors and notes.\n",
     "            submitter_str = submitter\n",
-    "            if division == 'open' and submitter == 'dividiti':\n",
+    "            if submitter == 'dividiti':\n",
     "                # Form factors.\n",
     "                if system_id in [ 'hikey960', 'firefly', 'rpi4' ]: ff_e = 'x'\n",
     "                if system_id in [ 'mate10pro', 'hikey960' ]: ff_m = 'x'\n",
     "                if system_id in [ 'velociti' ]: ff_d = 'x'                            \n",
     "                # Notes.\n",
-    "                if system == 'velociti-tensorflow-v1.14-cpu':\n",
-    "                    notes = 'In the Other category, since this Intel CPU is no longer available (end-of-life).'\n",
     "                if system_id == 'hikey960':\n",
     "                    notes = 'Mobile chip in embedded form factor (development board).'\n",
-    "                # Object Detection is collaboration between dividiti and Politecnico di Milano.\n",
-    "                if system_id == 'velociti': submitter_str = 'dividiti + PoliMi'\n",
-    "            elif division == 'open' and submitter == 'Qualcomm':\n",
-    "                ff_m = 'x'\n",
-    "                notes = 'Median latency. MultiStream: Both Hexagon Vector Extensions (HVX) and Hexagon Tensor Accelerator (HTA).'\n",
-    "            elif division == 'open' and submitter == 'Habana':\n",
-    "                ff_d = ff_s = ff_e = 'x'\n",
-    "                if system_id == 'Goya_fast_latency':\n",
-    "                    notes = 'Low latency results ...'\n",
-    "                if system_id == 'Goya_med_latency':\n",
-    "                    notes = 'Medium latency results ...'\n",
-    "            elif division == 'open' and submitter == 'Inspur':\n",
+    "                if division == 'open':\n",
+    "                    # Object Detection is collaboration between dividiti and Politecnico di Milano.\n",
+    "                    if system_id == 'velociti': submitter_str = 'dividiti + PoliMi'                    \n",
+    "                    if system == 'velociti-tensorflow-v1.14-cpu':\n",
+    "                        notes = 'In the Other category, since this Intel CPU is no longer available (end-of-life).'\n",
+    "            elif submitter == 'Alibaba':\n",
     "                ff_s = 'x'\n",
-    "            elif division == 'open' and submitter == 'NVIDIA':\n",
+    "                if system_id == 'alibaba_cloud_t4':\n",
+    "                    notes = 'ECC off'\n",
+    "            elif submitter == 'DellEMC':\n",
+    "                ff_s = 'x'\n",
+    "                if system_id == 'R740_T4x4_tensorrt':\n",
+    "                    notes = 'ECC off'\n",
+    "            elif submitter == 'Google':\n",
+    "                ff_s = 'x'\n",
+    "                # TODO: What's 8?\n",
+    "                accelerator_name = 'TPU v3-8'\n",
+    "                system_name = '{:d}x Cloud {:s}'.format(int(accelerator_num/8), accelerator_name)\n",
+    "            elif submitter == 'Habana':\n",
+    "                ff_d = ff_s = ff_e = 'x'\n",
+    "                if division == 'open':\n",
+    "                    if system_id == 'Goya_fast_latency':\n",
+    "                        notes = 'Low latency results ...'\n",
+    "                    if system_id == 'Goya_med_latency':\n",
+    "                        notes = 'Medium latency results ...'  \n",
+    "            elif submitter == 'Intel':\n",
+    "                if system_id == 'ICL':\n",
+    "                    ff_m = 'x'\n",
+    "                else:\n",
+    "                    ff_s = 'x'\n",
+    "            elif submitter == 'NVIDIA':\n",
     "                if system_id == 'Xavier':\n",
     "                    ff_e = 'x'\n",
+    "                    if division == 'closed':\n",
+    "                        notes = 'GPU and both DLAs are used in Offline and MultiStream'\n",
     "                elif system_id == 'TitanRTXx4':\n",
     "                    ff_e = ff_s = ff_d = 'x'\n",
     "                elif system_id == 'T4x8':\n",
@@ -384,24 +400,18 @@
     "                elif system_id == 'T4x20':\n",
     "                    ff_s = 'x'\n",
     "                else:\n",
-    "                    raise Exception(\"Unsupported NVIDIA system '%s'!\" % system_id)\n",
-    "            elif division == 'closed' and submitter == 'Alibaba':\n",
+    "                    raise Exception(\"Unsupported NVIDIA system '%s'!\" % system_id)                    \n",
+    "            elif submitter == 'Qualcomm':\n",
+    "                ff_m = 'x'\n",
+    "                if division == 'open':\n",
+    "                    notes = 'Median latency. MultiStream: Both Hexagon Vector Extensions (HVX) and Hexagon Tensor Accelerator (HTA).'\n",
+    "                if division == 'closed':\n",
+    "                    notes = 'Hexagon Vector Extensions being used.'\n",
+    "            elif submitter == 'Tencent':\n",
     "                ff_s = 'x'\n",
-    "                if system_id == 'alibaba_cloud_t4':\n",
-    "                    notes = 'ECC off'\n",
-    "            elif division == 'closed' and submitter == 'DellEMC':\n",
+    "            # Open only.\n",
+    "            elif submitter == 'Inspur':\n",
     "                ff_s = 'x'\n",
-    "                if system_id == 'R740_T4x4_tensorrt':\n",
-    "                    notes = 'ECC off'\n",
-    "            elif division == 'closed' and submitter == 'Habana':\n",
-    "                ff_d = ff_s = ff_e = 'x'\n",
-    "            elif division == 'closed' and submitter == 'Google':\n",
-    "                ff_s = 'x'\n",
-    "            elif division == 'closed' and submitter == 'Intel':\n",
-    "                if system_id == 'ICL':\n",
-    "                    ff_m = 'x'\n",
-    "                else:\n",
-    "                    ff_s = 'x'\n",
     "            else:\n",
     "                raise Exception(\"Unsupported division/submitter combination '%s'/'%s'!\" % (division, submitter))\n",
     "\n",
@@ -437,15 +447,17 @@
     "#                 'Task'     : task,\n",
     "#                 'Scenario' : scenario_to_str.get(scenario, scenario),\n",
     "            }]\n",
+    "            # NB: 'Accelerator #' is important to sort Google's submissions correctly (not lexicographically).\n",
     "            index = [\n",
-    "                'Division', 'Category', 'Submitter', 'System', 'Software', 'Benchmark' #, 'Task', 'Scenario'\n",
+    "                'Division', 'Category', 'Submitter', 'Accelerator #', 'System', 'Software', 'Benchmark' #, 'Task', 'Scenario'\n",
     "            ]\n",
+    "            # Reset all scores.\n",
+    "            data[0].update({ score : '' for score in score_columns })\n",
+    "\n",
     "            # FOR EACH benchmark.\n",
     "            benchmarks = [ fn for fn in os.listdir(system_dir) if os.path.isdir(os.path.join(system_dir, fn)) ]\n",
-    "            print(\"#benchmarks: %d\" % len(benchmarks))\n",
-    "            for benchmark in benchmarks:\n",
-    "                # Reset all scores.\n",
-    "                data[0].update({ score : '' for score in score_columns })\n",
+    "            for (benchmark, benchmark_idx) in zip(benchmarks, range(len(benchmarks))):\n",
+    "                is_last_benchmark = (benchmark_idx == len(benchmarks) - 1)\n",
     "                # Benchmark (with notes).\n",
     "                benchmark_dict = non_imagenet_benchmarks.get(benchmark)\n",
     "                if benchmark_dict:\n",
@@ -471,13 +483,12 @@
     "                    # GNMT.\n",
     "                    benchmark_with_notes = benchmark                \n",
     "                # TODO: Rename to 'Model used, if not Closed Division default' for Open. Drop for Closed.\n",
-    "                data[0]['Benchmark'] = benchmark_with_notes\n",
+    "                if division == 'open':\n",
+    "                    data[0]['Benchmark'] = benchmark_with_notes\n",
     "\n",
     "                # FOR EACH scenario.\n",
     "                benchmark_dir = os.path.join(system_dir, benchmark)\n",
-    "                print(benchmark_dir)\n",
     "                scenarios = [ fn for fn in os.listdir(benchmark_dir) if os.path.isdir(os.path.join(benchmark_dir, fn)) ]\n",
-    "                print(\"#scenarios: %d\" % len(scenarios))\n",
     "                for scenario in scenarios:\n",
     "                    scenario_str = scenario_to_str.get(scenario,'')\n",
     "                    if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
@@ -504,8 +515,11 @@
     "                        raise Exception('Failed to extract accuracy information from \"%s\"' % accuracy_line)\n",
     "\n",
     "                    if scenario_str in [ 'SingleStream', 'MultiStream', 'Offline', 'Server' ]:\n",
-    "                        # TODO: Iterate over 5 runs for Server.\n",
-    "                        performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
+    "                        if submitter == 'Tencent' and scenario_str in [ 'SingleStream', 'Offline' ]:\n",
+    "                            performance_dir = os.path.join(experiment_dir, 'performance')\n",
+    "                        else:\n",
+    "                            # TODO: Iterate over 5 runs for Server.\n",
+    "                            performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')                            \n",
     "                        with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
     "                            summary_txt = summary_file.readlines()\n",
     "                            for line in summary_txt:\n",
@@ -630,11 +644,14 @@
     "                # END OF FOR EACH scenario\n",
     "                # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
     "                if division == 'closed': data[0]['Benchmark'] = ''\n",
-    "                df = pd.DataFrame(data)\n",
-    "                df = df.set_index(index)\n",
-    "                dfs.append(df)\n",
+    "                if division == 'closed' and is_last_benchmark:\n",
+    "                    df = pd.DataFrame(data)\n",
+    "                    df = df.set_index(index)\n",
+    "                    dfs.append(df)\n",
+    "                elif division == 'open':\n",
+    "                    print(\"TODO\")\n",
     "            # END OF FOR EACH benchmark\n",
-    "                \n",
+    "\n",
     "#                 # For open, construct a new DataFrame for each benchmark.\n",
     "#                 # Then, append to the list of similarly constructed DataFrames.\n",
     "#                 if division == 'open':\n",
@@ -656,7 +673,7 @@
     "\n",
     "# Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
     "df = pd.concat(dfs)\n",
-    "df.sort_index(ascending=False, inplace=True)\n",
+    "df.sort_index(ascending=True, inplace=True)\n",
     "# Reset the index, but keep Division and Category there.\n",
     "df = df.reset_index(level=index[2:])\n",
     "# Mimic the official template.\n",
