Support all closed submitters (with workarounds for now).

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -316,8 +316,9 @@
     "    submitters = [ fn for fn in os.listdir(submitters_dir) if os.path.isdir(os.path.join(submitters_dir, fn)) ]\n",
     "    for submitter in submitters:\n",
     "        # Selectively filter out submitters.\n",
-    "        #if division == 'open' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue \n",
-    "        if division == 'closed' and submitter not in [ 'Centaur' ]: continue # [ 'Alibaba', 'DellEMC', 'dividiti', 'Google', 'Habana', 'Intel', 'NVIDIA', 'Qualcomm', 'Tencent' ]: continue\n",
+    "        all_submitters_closed = [ 'Alibaba', 'CentaurTechnology', 'DellEMC', 'dividiti', 'FuriosaAI', 'Google', 'Habana', 'Hailo', 'Intel', 'NVIDIA', 'Qualcomm', 'Tencent' ]\n",
+    "        if division == 'closed' and submitter not in all_submitters_closed: continue\n",
+    "        #if division == 'open' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue\n",
     "        # FOR EACH system.\n",
     "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
     "        systems = [ fn for fn in os.listdir(results_dir) if os.path.isdir(os.path.join(results_dir, fn)) ]\n",
@@ -337,7 +338,7 @@
     "            processor_num = int(system_json.get('host_processors_per_node', -1))\n",
     "\n",
     "            # Accelerator.\n",
-    "            print(system)\n",
+    "            # Tencent: https://github.com/mlperf/submissions_inference_0_5/issues/285\n",
     "            accelerator = system_json.get('accelerator_model_name', 'N/A')\n",
     "            accelerator_num = int(system_json.get('accelerators_per_node', -1))\n",
     "\n",
@@ -348,6 +349,16 @@
     "            ff_m = ff_d = ff_s = ff_e = ''\n",
     "            notes = ''\n",
     "\n",
+    "            # Category.\n",
+    "            if system_json['status'] in [ 'available', 'Available' ]:\n",
+    "                category = 'Available'\n",
+    "            elif system_json['status'] in [ 'preview', 'Preview' ]:\n",
+    "                category = 'Preview'\n",
+    "            elif system_json['status'] in [ 'rdi', 'RDI' ]:\n",
+    "                category = 'Research, Development, Other'\n",
+    "            else:\n",
+    "                raise Exception(\"Unsupported category '%s'!\" % (system_json['status']))\n",
+    "            \n",
     "            # Submitter-specific form factors and notes.\n",
     "            submitter_str = submitter\n",
     "            if submitter == 'dividiti':\n",
@@ -409,6 +420,14 @@
     "                    notes = 'Hexagon Vector Extensions being used.'\n",
     "            elif submitter == 'Tencent':\n",
     "                ff_s = 'x'\n",
+    "            # Preview only.\n",
+    "            elif submitter == 'CentaurTechnology':\n",
+    "                ff_d = ff_s = ff_e = 'x'\n",
+    "            elif submitter == 'Hailo':\n",
+    "                ff_d = ff_e = 'x'\n",
+    "            # RDO only.\n",
+    "            elif submitter == 'FuriosaAI':\n",
+    "                ff_d = ff_s = ff_e = 'x'\n",
     "            # Open only.\n",
     "            elif submitter == 'Inspur':\n",
     "                ff_s = 'x'\n",
@@ -443,7 +462,7 @@
     "                'Notes'    : notes,\n",
     "                # Misc.\n",
     "                'Division' : division,\n",
-    "                'Category' : system_json['status'],\n",
+    "                'Category' : category,\n",
     "#                 'Task'     : task,\n",
     "#                 'Scenario' : scenario_to_str.get(scenario, scenario),\n",
     "            }]\n",
@@ -494,28 +513,34 @@
     "                    if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
     "                    experiment_dir = os.path.join(benchmark_dir, scenario)\n",
     "                    # Extract accuracy.\n",
-    "                    accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
-    "                    with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
-    "                        accuracy_txt = accuracy_file.readlines()\n",
-    "                        accuracy_line = accuracy_txt[-1]\n",
-    "                    if accuracy_line.startswith('mAP'):\n",
+    "                    if submitter == 'Hailo' and benchmark == 'ssd-small':\n",
+    "                         # https://github.com/mlperf/submissions_inference_0_5/issues/287\n",
     "                        task = 'OD'\n",
-    "                        match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
-    "                        accuracy = float(match.group(1))\n",
-    "                    elif accuracy_line.startswith('accuracy'):\n",
-    "                        task = 'IC'\n",
-    "                        match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
-    "                        accuracy = float(match.group(1))\n",
-    "                    elif accuracy_line.startswith('BLEU'):\n",
-    "                        task = 'MT'\n",
-    "                        match = re.match('BLEU:\\s*(.+)', accuracy_line)\n",
-    "                        accuracy = float(match.group(1))\n",
+    "                        accuracy = 21.920 # ssd-small/SingleStream/accuracy/results.json\n",
     "                    else:\n",
-    "                        pprint(accuracy_txt)\n",
-    "                        raise Exception('Failed to extract accuracy information from \"%s\"' % accuracy_line)\n",
+    "                        accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
+    "                        with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
+    "                            accuracy_txt = accuracy_file.readlines()\n",
+    "                            accuracy_line = accuracy_txt[-1]\n",
+    "                        if accuracy_line.startswith('mAP'):\n",
+    "                            task = 'OD'\n",
+    "                            match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "                            accuracy = float(match.group(1))\n",
+    "                        elif accuracy_line.startswith('accuracy'):\n",
+    "                            task = 'IC'\n",
+    "                            match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "                            accuracy = float(match.group(1))\n",
+    "                        elif accuracy_line.startswith('BLEU'):\n",
+    "                            task = 'MT'\n",
+    "                            match = re.match('BLEU:\\s*(.+)', accuracy_line)\n",
+    "                            accuracy = float(match.group(1))\n",
+    "                        else:\n",
+    "                            pprint(accuracy_txt)\n",
+    "                            raise Exception('Failed to extract accuracy information from \"%s\"' % accuracy_line)\n",
     "\n",
     "                    if scenario_str in [ 'SingleStream', 'MultiStream', 'Offline', 'Server' ]:\n",
     "                        if submitter == 'Tencent' and scenario_str in [ 'SingleStream', 'Offline' ]:\n",
+    "                            # https://github.com/mlperf/submissions_inference_0_5/issues/286\n",
     "                            performance_dir = os.path.join(experiment_dir, 'performance')\n",
     "                        else:\n",
     "                            # TODO: Iterate over 5 runs for Server.\n",
