--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [MLPerf Inference v0.5](https://github.com/mlperf/inference/tree/master/v0.5) - results table generation"
+    "# [MLPerf Inference Results v0.5](https://github.com/mlperf/inference/tree/master/v0.5)\n",
+    "## Automatic results table generation (c) [dividiti](http://dividiti.com/)"
    ]
   },
   {
@@ -304,21 +305,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "dfs = []\n",
     "# FOR EACH division.\n",
     "for division in divisions:\n",
-    "    if division != 'closed': continue # skip for now\n",
+    "    #if division != 'open': continue # skip for now\n",
     "    # FOR EACH submitter.\n",
     "    submitters_dir = os.path.join(results_path, division)\n",
     "    submitters = [ fn for fn in os.listdir(submitters_dir) if os.path.isdir(os.path.join(submitters_dir, fn)) ]\n",
     "    for submitter in submitters:\n",
     "        # Selectively filter out submitters.\n",
-    "        all_submitters_closed = [ 'Alibaba', 'CentaurTechnology', 'DellEMC', 'dividiti', 'FuriosaAI', 'Google', 'Habana', 'Hailo', 'Intel', 'NVIDIA', 'Qualcomm', 'Tencent' ]\n",
-    "        if division == 'closed' and submitter not in all_submitters_closed: continue\n",
-    "        #if division == 'open' and submitter not in [ 'NVIDIA', 'Qualcomm', 'Habana', 'Inspur', 'dividiti' ]: continue\n",
+    "        #all_submitters_closed = [ 'Alibaba', 'CentaurTechnology', 'DellEMC', 'dividiti', 'FuriosaAI', 'Google', 'Habana', 'Hailo', 'Intel', 'NVIDIA', 'Qualcomm', 'Tencent' ]\n",
+    "        #if division == 'closed' and submitter not in all_submitters_closed: continue\n",
+    "        #all_submitters_open = [ 'dividiti', 'Habana', 'Inspur', 'NVIDIA', 'Qualcomm' ]\n",
+    "        #if division == 'open' and submitter not in all_submitters_open: continue\n",
     "        # FOR EACH system.\n",
     "        results_dir = os.path.join(submitters_dir, submitter, 'results')\n",
     "        systems = [ fn for fn in os.listdir(results_dir) if os.path.isdir(os.path.join(results_dir, fn)) ]\n",
@@ -328,11 +332,22 @@
     "            system_json_path = os.path.join(submitters_dir, submitter, 'systems', system_json_name)\n",
     "            with open(system_json_path) as system_json_file:\n",
     "                system_json = json.load(system_json_file)\n",
+    "\n",
+    "            # Category.\n",
+    "            if system_json['status'] in [ 'available', 'Available' ]:\n",
+    "                category = 'Available'\n",
+    "            elif system_json['status'] in [ 'preview', 'Preview' ]:\n",
+    "                category = 'Preview'\n",
+    "            elif system_json['status'] in [ 'rdi', 'RDI' ]:\n",
+    "                category = 'Research, Development, Other'\n",
+    "            else:\n",
+    "                raise Exception(\"Unsupported category '%s'!\" % (system_json['status']))\n",
+    "\n",
     "            # System details.\n",
     "            system_name = system_json['system_name']\n",
     "            system_list = system.split('-')\n",
-    "            system_id = system_list[0]\n",
-    "\n",
+    "            system_id = system_list[0]                \n",
+    "                \n",
     "            # Processor (CPU).\n",
     "            processor = system_id_to_processor.get(system_id, system_json.get('host_processor_model_name', 'N/A'))\n",
     "            processor_num = int(system_json.get('host_processors_per_node', -1))\n",
@@ -344,34 +359,24 @@
     "\n",
     "            # Software (framework).\n",
     "            software = system_json['framework']\n",
-    "            \n",
+    "\n",
     "            # Default form factors and notes.\n",
     "            ff_m = ff_d = ff_s = ff_e = ''\n",
-    "            notes = ''\n",
-    "\n",
-    "            # Category.\n",
-    "            if system_json['status'] in [ 'available', 'Available' ]:\n",
-    "                category = 'Available'\n",
-    "            elif system_json['status'] in [ 'preview', 'Preview' ]:\n",
-    "                category = 'Preview'\n",
-    "            elif system_json['status'] in [ 'rdi', 'RDI' ]:\n",
-    "                category = 'Research, Development, Other'\n",
-    "            else:\n",
-    "                raise Exception(\"Unsupported category '%s'!\" % (system_json['status']))\n",
-    "            \n",
+    "            notes = ''                \n",
+    "                \n",
     "            # Submitter-specific form factors and notes.\n",
     "            submitter_str = submitter\n",
     "            if submitter == 'dividiti':\n",
     "                # Form factors.\n",
     "                if system_id in [ 'hikey960', 'firefly', 'rpi4' ]: ff_e = 'x'\n",
     "                if system_id in [ 'mate10pro', 'hikey960' ]: ff_m = 'x'\n",
-    "                if system_id in [ 'velociti' ]: ff_d = 'x'                            \n",
+    "                if system_id in [ 'velociti' ]: ff_d = 'x'\n",
     "                # Notes.\n",
     "                if system_id == 'hikey960':\n",
     "                    notes = 'Mobile chip in embedded form factor (development board).'\n",
     "                if division == 'open':\n",
     "                    # Object Detection is collaboration between dividiti and Politecnico di Milano.\n",
-    "                    if system_id == 'velociti': submitter_str = 'dividiti + PoliMi'                    \n",
+    "                    if system_id == 'velociti': submitter_str = 'dividiti + PoliMi'\n",
     "                    if system == 'velociti-tensorflow-v1.14-cpu':\n",
     "                        notes = 'In the Other category, since this Intel CPU is no longer available (end-of-life).'\n",
     "            elif submitter == 'Alibaba':\n",
@@ -384,7 +389,7 @@
     "                    notes = 'ECC off'\n",
     "            elif submitter == 'Google':\n",
     "                ff_s = 'x'\n",
-    "                # TODO: What's 8?\n",
+    "                # FIXME: What's 8?\n",
     "                accelerator_name = 'TPU v3-8'\n",
     "                system_name = '{:d}x Cloud {:s}'.format(int(accelerator_num/8), accelerator_name)\n",
     "            elif submitter == 'Habana':\n",
@@ -581,8 +586,7 @@
     "                        elif scenario_str == 'Offline':\n",
     "                            samples_per_second = float(score)\n",
     "                    else:\n",
-    "                        # TODO: Extract scores for the other scenarios.\n",
-    "                        raise Exception('Scenario \"%s\" is not yet supported!' % scenario_str)\n",
+    "                        raise Exception(\"Unsupported scenario '%s'!\" % scenario_str)\n",
     "                        \n",
     "                    # Tasks.\n",
     "                    ic1 = (task=='IC' and benchmark.startswith('mobilenet'))\n",
@@ -669,29 +673,11 @@
     "                # END OF FOR EACH scenario\n",
     "                # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
     "                if division == 'closed': data[0]['Benchmark'] = ''\n",
-    "                if division == 'closed' and is_last_benchmark:\n",
+    "                if is_last_benchmark or (division == 'open' and submitter == 'dividiti'):\n",
     "                    df = pd.DataFrame(data)\n",
     "                    df = df.set_index(index)\n",
     "                    dfs.append(df)\n",
-    "                elif division == 'open':\n",
-    "                    print(\"TODO\")\n",
     "            # END OF FOR EACH benchmark\n",
-    "\n",
-    "#                 # For open, construct a new DataFrame for each benchmark.\n",
-    "#                 # Then, append to the list of similarly constructed DataFrames.\n",
-    "#                 if division == 'open':\n",
-    "#                     df = pd.DataFrame(data)\n",
-    "#                     df = df.set_index(index)\n",
-    "#                     dfs.append(df)\n",
-    "#             # END OF FOR EACH benchmark            \n",
-    "#             # For closed, construct a new DataFrame for each system.\n",
-    "#             # Then, append to the list of similarly constructed DataFrames.\n",
-    "#             if division == 'closed':\n",
-    "#                 # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
-    "#                 if division == 'closed': data[0]['Benchmark'] = ''\n",
-    "#                 df = pd.DataFrame(data)\n",
-    "#                 df = df.set_index(index)\n",
-    "#                 dfs.append(df)\n",
     "        # END OF FOR EACH system\n",
     "    # END OF FOR EACH submitter\n",
     "# END OF FOR EACH division\n",
@@ -728,8 +714,8 @@
     "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
     "# then count the numbers across the columns and finally sum.\n",
     "print(\"#results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "# print(\"#results/open: %d\" % df.loc['open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "# print(\"#results/closed: %d\" % df.loc['closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
+    "print(\"#results/closed: %d\" % df.loc['closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#results/open: %d\" % df.loc['open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
    ]
   },
   {
@@ -745,25 +731,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create a Pandas Excel writer using XlsxWriter as the engine.\n",
-    "# from pandas import ExcelWriter\n",
-    "# xlsx_filename = 'submissions_inference_0_5.xlsx'\n",
-    "# xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
-    "# for division in df.index.unique(level='Division'):\n",
-    "#     df_d = df.loc[division]\n",
-    "#     for category in df_d.index.unique(level='Category'):\n",
-    "#         df_dc = df_d.loc[category]\n",
-    "#         if division == 'open':\n",
-    "#             df_xlsx = df_dc\n",
-    "#         elif division == 'closed':\n",
-    "#             df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
-    "#         else:\n",
-    "#             continue\n",
-    "#         # Write different division and category results to separate sheets. Omit index.\n",
-    "#         df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
-    "#         display_in_full(df_xlsx)\n",
-    "# xlsx_writer.save()\n",
-    "# !cp $xlsx_filename ~/Downloads"
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "from pandas import ExcelWriter\n",
+    "xlsx_filename = 'MLPerf Inference Results v0.5 (Automatically Generated)'\n",
+    "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
+    "for division in df.index.unique(level='Division'):\n",
+    "    df_d = df.loc[division]\n",
+    "    for category in df_d.index.unique(level='Category'):\n",
+    "        df_dc = df_d.loc[category]\n",
+    "        if division == 'open':\n",
+    "            df_xlsx = df_dc\n",
+    "        elif division == 'closed':\n",
+    "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
+    "        else:\n",
+    "            continue\n",
+    "        # Write different division and category results to separate sheets. Omit index.\n",
+    "        print('*' * 100)\n",
+    "        print('* Division / Category: %s / %s' % (division, category))\n",
+    "        print('*' * 100)\n",
+    "        if category == 'Research, Development, Other': category = 'RDO'\n",
+    "        df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
+    "        display_in_full(df_xlsx)\n",
+    "        print('')\n",
+    "xlsx_writer.save()\n",
+    "!cp $xlsx_filename ~/Downloads"
    ]
   },
   {
