--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Divisions, categories"
+    "### Divisions"
    ]
   },
   {
@@ -97,8 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "divisions = [ 'closed', 'open' ]\n",
-    "categories = [ 'available',  'preview', 'RDI', 'RDO' ]"
+    "divisions = [ 'closed', 'open' ]"
    ]
   },
   {
@@ -130,6 +129,22 @@
     "    # Offline.\n",
     "    'offline'       : 'Offline',\n",
     "    'Offline'       : 'Offline',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "division_to_str = {\n",
+    "    # Open.\n",
+    "    'open'   : 'Open',\n",
+    "    'Open'   : 'Open',\n",
+    "    # Closed.\n",
+    "    'closed' : 'Closed',\n",
+    "    'Closed' : 'Closed'\n",
     "}"
    ]
   },
@@ -466,7 +481,7 @@
     "                                    format(division, submitter),\n",
     "                'Notes'    : notes,\n",
     "                # Misc.\n",
-    "                'Division' : division,\n",
+    "                'Division' : division_to_str.get(division, division),\n",
     "                'Category' : category,\n",
     "#                 'Task'     : task,\n",
     "#                 'Scenario' : scenario_to_str.get(scenario, scenario),\n",
@@ -709,13 +724,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Should match the official table in the end.\n",
-    "print(\"#rows: %d\" % len(df))\n",
+    "# Should match the official table.\n",
+    "print(\"#Rows: %d\" % len(df))\n",
     "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
     "# then count the numbers across the columns and finally sum.\n",
-    "print(\"#results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#results/closed: %d\" % df.loc['closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#results/open: %d\" % df.loc['open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
+    "print(\"#Results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#Results/Closed: %d\" % df.loc['Closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#Results/Open: %d\" % df.loc['Open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
    ]
   },
   {
@@ -733,15 +748,16 @@
    "source": [
     "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
     "from pandas import ExcelWriter\n",
-    "xlsx_filename = 'MLPerf Inference Results v0.5 (Automatically Generated)'\n",
+    "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
+    "xlsx_filename = 'MLPerf Inference Results v0_5 (Automatically Generated).xlsx'\n",
     "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
     "for division in df.index.unique(level='Division'):\n",
     "    df_d = df.loc[division]\n",
     "    for category in df_d.index.unique(level='Category'):\n",
     "        df_dc = df_d.loc[category]\n",
-    "        if division == 'open':\n",
+    "        if division == 'Open':\n",
     "            df_xlsx = df_dc\n",
-    "        elif division == 'closed':\n",
+    "        elif division == 'Closed':\n",
     "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
     "        else:\n",
     "            continue\n",
@@ -749,12 +765,12 @@
     "        print('*' * 100)\n",
     "        print('* Division / Category: %s / %s' % (division, category))\n",
     "        print('*' * 100)\n",
-    "        if category == 'Research, Development, Other': category = 'RDO'\n",
+    "        if category == 'Research, Development, Other': category = 'RDO' # NB: sheet_name must be =< 31 symbols.\n",
     "        df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
     "        display_in_full(df_xlsx)\n",
     "        print('')\n",
     "xlsx_writer.save()\n",
-    "!cp $xlsx_filename ~/Downloads"
+    "!cp \"$xlsx_filename\" ~/Downloads"
    ]
   },
   {
