Generate row ID as e.g. 'Inf-0.5-001'.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -702,6 +702,7 @@
     "df.sort_index(ascending=True, inplace=True)\n",
     "# Reset the index, but keep Division and Category there.\n",
     "df = df.reset_index(level=index[2:])\n",
+    "df['ID'] = [ 'Inf-0.5-{:03d}'.format(ID) for ID in range(1, len(df)+1) ]\n",
     "# Mimic the official template.\n",
     "columns = [ 'ID', 'Submitter', 'System', 'Benchmark' ]\n",
     "columns += score_columns\n",
@@ -734,10 +735,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(level='Division').sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dump Excel"
+    "### Dump Excel (into separate sheets for Division / Category)"
    ]
   },
   {
@@ -746,31 +756,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
-    "from pandas import ExcelWriter\n",
-    "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
-    "xlsx_filename = 'MLPerf Inference Results v0_5 (Automatically Generated).xlsx'\n",
-    "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
-    "for division in df.index.unique(level='Division'):\n",
-    "    df_d = df.loc[division]\n",
-    "    for category in df_d.index.unique(level='Category'):\n",
-    "        df_dc = df_d.loc[category]\n",
-    "        if division == 'Open':\n",
-    "            df_xlsx = df_dc\n",
-    "        elif division == 'Closed':\n",
-    "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
-    "        else:\n",
-    "            continue\n",
-    "        # Write different division and category results to separate sheets. Omit index.\n",
-    "        print('*' * 100)\n",
-    "        print('* Division / Category: %s / %s' % (division, category))\n",
-    "        print('*' * 100)\n",
-    "        if category == 'Research, Development, Other': category = 'RDO' # NB: sheet_name must be =< 31 symbols.\n",
-    "        df_xlsx.to_excel(xlsx_writer, sheet_name='{}-{}'.format(division, category), index=False)\n",
-    "        display_in_full(df_xlsx)\n",
-    "        print('')\n",
-    "xlsx_writer.save()\n",
-    "!cp \"$xlsx_filename\" ~/Downloads"
+    "# # Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "# from pandas import ExcelWriter\n",
+    "# # NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
+    "# xlsx_filename = 'MLPerf Inference Results v0_5 (Automatically Generated).xlsx'\n",
+    "# xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
+    "# for division in df.index.unique(level='Division'):\n",
+    "#     df_d = df.loc[division]\n",
+    "#     for category in df_d.index.unique(level='Category'):\n",
+    "#         df_dc = df_d.loc[category]\n",
+    "#         if division == 'Open':\n",
+    "#             df_xlsx = df_dc\n",
+    "#         elif division == 'Closed':\n",
+    "#             df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
+    "#         else:\n",
+    "#             continue\n",
+    "#         # Write different division and category results to separate sheets. Omit index.\n",
+    "#         print('*' * 100)\n",
+    "#         print('* Division / Category: %s / %s' % (division, category))\n",
+    "#         print('*' * 100)\n",
+    "#         if category == 'Research, Development, Other': category = 'RDO' # NB: sheet_name must be =< 31 symbols.\n",
+    "#         df_xlsx.to_excel(xlsx_writer, sheet_name='{} - {}'.format(division, category), index=False)\n",
+    "#         display_in_full(df_xlsx)\n",
+    "#         print('')\n",
+    "# xlsx_writer.save()\n",
+    "# !cp \"$xlsx_filename\" ~/Downloads"
    ]
   },
   {
