Add interesting stats.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -716,6 +716,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total number of results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
+    "# then count the numbers across the columns and finally sum.\n",
+    "print(\"#Results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#Results/Closed: %d\" % df.loc['Closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "print(\"#Results/Open: %d\" % df.loc['Open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Total number of rows"
    ]
   },
@@ -725,13 +752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Should match the official table.\n",
-    "print(\"#Rows: %d\" % len(df))\n",
-    "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
-    "# then count the numbers across the columns and finally sum.\n",
-    "print(\"#Results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#Results/Closed: %d\" % df.loc['Closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#Results/Open: %d\" % df.loc['Open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
+    "df['Ones'] = 1"
    ]
   },
   {
@@ -740,14 +761,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(level='Division').sum()"
+    "df['Ones'].groupby(level='Division').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Ones'].groupby(level=['Division', 'Category']).sum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dump Excel (into separate sheets for Division / Category)"
+    "### Number of rows per submitter per division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index()[['Division', 'Submitter', 'Ones']] \\\n",
+    "    .set_index(['Submitter', 'Division']) \\\n",
+    "    .groupby(level=['Submitter', 'Division']).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO: Number of results per submitter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dump Excel (into separate sheets for Division / Category)"
    ]
   },
   {
@@ -787,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display HTML"
+    "## Display HTML with embedded links (TODO)"
    ]
   },
   {
